Implement JWT signature